# libre_game_of_life

./: README.md  import_map.json  package.json  readme.md
_game_of_life_engine/: package.json  pnpm-lock.yaml  tsconfig.json
_game_of_life_engine/src/: _presets.ts  cell.ts  mod.ts  neighbors.test.ts
components/: Button.tsx  Icon.tsx  RangeInput.tsx  Select.tsx  buildPresetsOptions.ts  presetOptions.ts  useWindowDimensions.ts
components/Icons/: Next.tsx  Pause.tsx
engine/: Cargo.toml
frontend/: .eslintrc.js  package.json
game-of-life/: .eslintrc.cjs  .eslintrc.js  .eslintrc.json  deno.json  package.json  pnpm-lock.yaml
game-of-life-engine/: package.json  pnpm-lock.yaml
game-of-life-engine/src/: mod.ts
game-of-life-frontend/: deno.json  package.json  pnpm-lock.yaml
game-of-life/src/: mod.ts
game_of_life_engine/: package.json  pnpm-lock.yaml
game_of_life_engine/src/: array.test.ts  array.ts  cartesianPlane.test.ts  cartesianPlane.ts  cell.test.ts  model.test.ts  model.ts  neighbors.test.ts  neighbors.ts  (+1 more)
game_of_life_engine_rust/: Cargo.toml  build.sh
game_of_life_engine_rust/src/: cartesian_plane.rs  cell.rs  lib.rs  main.rs  model.rs  neighbor.rs
game_of_life_engine_rust/src/app/: mod.rs
game_of_life_engine_rust/src/domain/: camera.rs  cartesian_plane.rs  cell.rs  coordinate.rs  mod.rs  model.rs  neighbor.rs  operations.rs  preset.rs  render.rs  universe.rs
game_of_life_engine_rust/src/domain/coordinate/: cartesian.rs  convert.rs  matrix.rs  mod.rs
game_of_life_engine_rust/src/domain/geometry/: coordinate.rs  mod.rs  operation.rs
game_of_life_engine_rust/src/domain/geometry/poligon/: rect.rs
game_of_life_engine_rust/src/domain/plane/: cartesian.rs  matrix.rs  mod.rs  shape.rs
game_of_life_engine_rust/src/domain/poligon/: mod.rs  rect.rs  square.rs
game_of_life_engine_rust/src/main/: mod.rs
game_of_life_frontend/: package.json  pnpm-lock.yaml
game_of_life_frontend_core/: package.json  pnpm-lock.yaml
hooks/: useGameOfLife.ts  useWindowDimension.ts  useWindowDimensions.ts
integrations/: gameStore.ts  useGameStore.ts
islands/: Canvas.tsx
lib/: Cargo.toml
routes/: index.tsx
web_backend/: Cargo.toml  build.sh
web_backend/src/: app.rs  lib.rs
web_backend/src/app/: mod.rs
web_backend/src/domain/: neighbor.rs  universe.rs
web_frontend/: deno.json  package.json  pnpm-lock.yaml  vite.config.ts
web_frontend_deprecated/: package.json  pnpm-lock.yaml  tailwind.config.js
(+519 files in other folders)
