[package]
name = "libre_game_of_life_web_backend"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]

js-sys = "0.3.71"
wasm-bindgen = "0.2.94"
web-sys = { version = "0.3.71", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console'
] }
serde = { version = "1.0.210", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
wasm-bindgen-futures = "0.4.45"
libre_game_of_life_lib = { path = "../lib" }