[package]
name = "libre_game_of_life_web_backend"
version = "1.0.0"
edition = "2024"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"
web-sys = { version = "0.3.77", features = [
    'CanvasRenderingContext2d',
    'Document',
    'Element',
    'HtmlCanvasElement',
    'Window',
    'console'
] }
serde = { version = "1.0.219", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
gloo-timers = "0.3.0"
wasm-bindgen-futures = "0.4.50"
libre_game_of_life_lib = { path = "../lib" }
manfredo = { git = "https://github.com/joao-arthur/manfredo", rev = "a1ecdf323348f87ad17ae23a426297e0bbb13a4d" }
